2014-11-11  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs:
	* examples/site-lib/examp.fs:
	* examples/site-lib/popup.fs:
	* examples/site-lib/snd-forth-init.fs: Rename all words
	containing data-format with sample-type.

	* src/utils.c: Adjustments on get_line's history mechanism.

2014-11-10  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs (env-sound-interp,
	granulated-sound-interp): use vct instead of with-sound.

	* src/object.c (fth_object_cycle_set): fixed.

2014-11-06  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/examp.fs (env-sound-interp,
	granulated-sound-interp): current-edit-position added.

	* examples/site-lib/extensions.fs (ramp-expt, env-expt-channel):
	fixed.

2014-11-04  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs
	* examples/site-lib/examp.fs (mus-sound-data-format):
	Renamed to mus-sound-sample-type.

2014-04-28  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/clm.fs
	* examples/site-lib/clm-ins.fs
	* examples/site-lib/draw.fs
	* examples/site-lib/dsp.fs
	* examples/site-lib/env.fs
	* examples/site-lib/effects.fs
	* examples/site-lib/examp.fs
	* examples/site-lib/extensions.fs
	* examples/site-lib/popup.fs
	* examples/site-lib/rubber.fs
	* examples/site-lib/snd-forth-init.fs: Rename all words
	containing frames with framples.

	* examples/site-lib/clm.fs (play-sound, record-sound): Removed.

	* examples/site-lib/clm-ins.fs (fullmix): Removed.

	* examples/site-lib/examp.fs (env-sound-interp,
	granualted-sound-interp): Replace deprecated sound-data
	words with with-sound calls.

2014-04-27  Michael Scholz  <mi-scholz@users.sourceforge.net>

	* examples/site-lib/mix.fs (save-mix, save-mixes): Removed.

	* examples/site-lib/hooks.fs (dac-hook, stop-dac-hook):
	Removed.

	* examples/site-lib/extensions.fs (local-dac-func): Removed.

2014-02-19  Michael Scholz  <mi-scholz@users.sourceforge.net>
